change structure of Note App

--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>Final Project</title>
 </head>
 <body>
-    <h1>Here will be my final project :) but now this's just... nothing</h1>
+    <div class="container">
+        <header id="header">
+<!--             <div><img src="./DEi3D0rUQAAl1xe (1).jpg" alt="header-image" id="header-image"></div>
+ -->            <button class="change-cover-button" type="button">change cover</button>
+        </header>
+        <div id="my-notes">           
+            <h1>My Notes</h1>
+            <button class="add-note" type="button">+</button>
+
+        </div>   
+        <hr>
+        <div id="notes-section">
+            <textarea class="note">Some simple text</textarea>
+            <textarea class="note">Some simple text</textarea>
+            <textarea class="note">Some simple text</textarea>
+            <textarea class="note">Some simple text</textarea>
+
+<!--             <button class="add-note" type="button">+</button>
+ -->        </div>
+    </div>
 </body>
 </html>
