HTML initial structure of the proyect

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
     <div class="container">
         <header id="header">
-<!--             <div><img src="./DEi3D0rUQAAl1xe (1).jpg" alt="header-image" id="header-image"></div>
- -->            <button class="change-cover-button" type="button">change cover</button>
+        <button class="change-cover-button" type="button">change cover</button>
         </header>
         <div id="my-notes">           
             <h1>My Notes</h1>
