primera pre entrega de proyecto final

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,25 +8,22 @@
     <link rel="stylesheet" href="./styles.css">
     <title>Final Project</title>
 </head>
+
 <body>
-    <div class="container">
-        <header id="header">
-        <button class="change-cover-button" type="button">change cover</button>
+    <div id="notes-app-container">
+        <header>
         </header>
-        <div id="my-notes">           
-            <h1>My Notes</h1>
-            <button class="add-note" type="button">+</button>
 
-        </div>   
-        <hr>
+
         <div id="notes-section">
-            <textarea class="note">Some simple text</textarea>
-            <textarea class="note">Some simple text</textarea>
-            <textarea class="note">Some simple text</textarea>
-            <textarea class="note">Some simple text</textarea>
-
-<!--             <button class="add-note" type="button">+</button>
- -->        </div>
+            <textarea class="note">this will be an example of how the note will look's like and the idea is. When button had clicked this template will appear</textarea>
+            <input type="button" name="AddNote" value="+" id="add-note" >
+        </div>
     </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+    <script src="main.js"></script>
 </body>
+
 </html>
