--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <div id="notes-app-container">
         <header>
         </header>
-
-
         <div id="notes-section">
-            <textarea class="note">this will be an example of how the note will look's like and the idea is. When button had clicked this template will appear</textarea>
-            <input type="button" name="AddNote" value="+" id="add-note" >
+            <textarea
+                class="note">you can click the button and I will appear, or click on me to type, double click to delete me</textarea>
+            <input type="button" name="AddNote" value="+" id="add-note">
+
         </div>
     </div>
 
