--- a/index.html
+++ b/index.html
@@ -5,22 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>Final Project</title>
 </head>
 
 <body>
     <div id="notes-app-container">
         <div id="notes-section">
-            <textarea
-                class="note">you can click the button and I will appear, or click on me to type, double click to delete me</textarea>
+            <textarea class="note"
+                id="instruction">you can click the button and I will appear, or click on me to type, double click to delete me</textarea>
             <input type="button" name="AddNote" value="+" id="add-note">
         </div>
     </div>
 
+    <!-- main js  -->
+    <script src="scripts/main.js"></script>
+    <!-- ajax -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
-    <script src="main.js"></script>
+    <!-- Sweet alert library -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
