--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="notes-app-container">
         <div id="notes-section">
             <textarea class="note"
-                id="instruction">you can click the button and I will appear, or click on me to type, double click to delete me</textarea>
+                id="instruction">you can click the button and I will appear, or click on me to type, double click to delete me. You can also write without worrying about your grammar</textarea>
             <input type="button" name="AddNote" value="+" id="add-note">
         </div>
     </div>
