Entrega del proyecto final

--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Final Project</title>
+    <title>Notes App</title>
 </head>
 
 <body>
     <div id="notes-app-container">
         <div id="notes-section">
-            <textarea class="note"
-                id="instruction">you can click the button and I will appear, or click on me to type, double click to delete me. You can also write without worrying about your grammar</textarea>
             <input type="button" name="AddNote" value="+" id="add-note">
         </div>
     </div>
